refact(docker): a new slim way to build image